[package]
name = "ctdna"
edition = "2018"
version = "0.1.0"
authors = ["Matti Annala <matti.annala@uta.fi>"]
default-run = "ctdna"


# [features]
# vendored-zmq = ['zmq/vendored']



[dependencies]
rocket = "0.5.0-rc.2"
lazy_static = "1"
zmq = "0.10.0"
quick-protobuf = "0.8.0"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"




[[bin]]
name = "ctdna"
# Use this to generate protobuf code for rust
path = "ctdna_predict.rs"

[[bin]]
name = "protoGen"
path = "protobuf/rustProtoGen.rs"
